# mid

./: .clang-format  .gitignore  Dockerfile  README.md  entrypoint.sh
connectivity_planner/: CMakeLists.txt  package.xml  setup.py
connectivity_planner/models/: best.ts  betavae.ts  betavae.ts.json
connectivity_planner/scripts/: channel_model_test.py  connectivity_planner.py  connectivity_planner_node.py  connectivity_visualization_node.py  publish_task.py  publish_tasks.py
connectivity_planner/src/connectivity_planner/: channel_model.py  lloyd.py  utils.py
experiment_msgs/: CMakeLists.txt  package.xml
experiment_msgs/msg/: Command.msg  Payload.msg
laserscan_utils/: CMakeLists.txt  package.xml
laserscan_utils/src/: laserscan_merger.cpp
or_planner/: CMakeLists.txt  package.xml
or_planner/include/or_planner/: or_planner.h
or_planner/src/: or_planner.cpp  or_planner_node.cpp  or_planner_test.cpp
or_protocol/: .clang-format  CMakeLists.txt  package.xml
or_protocol/config/: install.sh  mid-adhoc-open.conf  mid-adhoc.conf  mid-adhoc@.service  rename_interface.sh  rosconsole.config  setup.sh
or_protocol/include/or_protocol/: bcast_socket.h  constants.h  network_state.h  node_state.h  or_node.h  or_protocol.h  types.h  utils.h
or_protocol/launch/: or_node.launch  txpower.launch
or_protocol/scripts/: int_publisher  orbag  orlogs  update
or_protocol/src/: bcast_socket.cpp  fragment_test.cpp  network_state.cpp  node.cpp  node_state.cpp  or_node.cpp  or_protocol.cpp  ping_node.cpp  recv_node.cpp  routing_example.cpp  routing_visualizer.cpp  send_node.cpp  serialization_example.cpp  serialization_test.cpp  sim_routing_node.cpp  status_aggregator.cpp  test_node.cpp  utils.cpp
or_protocol/test/: serialization_test.cpp  test.cpp
or_protocol/test/samples/: sample1.yaml  sample2.yaml  sample3.yaml  sample4.yaml
or_protocol_msgs/: CMakeLists.txt  package.xml
or_protocol_msgs/msg/: ETXEntry.msg  ETXList.msg  Header.msg  Log.msg  NetworkStatus.msg  Packet.msg  Point.msg  RoutingDestEntry.msg  RoutingRule.msg  RoutingSrcEntry.msg  RoutingTable.msg  TopicInfo.msg
perch_experiment/: CMakeLists.txt  package.xml
perch_experiment/config/: 2task1mid.yaml  3task0mid.yaml  3task0mid_relay.yaml  3task3mid.yaml  3task3mid_relay.yaml  experiment.yaml  heading_calibration.yaml
perch_experiment/launch/: analysis.launch  calibration.launch  camera.launch  individual_scarab.launch  monitor.launch  navigation.launch  perch_experiment_sim.launch  perch_exploration_sim.launch  perch_mid_test_sim.launch  perch_relay_sim.launch  planner.launch  scarab.launch  scarab_multi_exploration.launch  scarab_multi_test.launch  scarab_sim.launch
perch_experiment/rviz/: analysis.rviz  monitor.rviz  perch_experiment_sim.rviz  perch_exploration_sim.rviz  perch_mid_test_sim.rviz
perch_experiment/scripts/: camera_test.sh  fake_robot  start.sh  static_pose_publisher  stop.sh
perch_experiment/src/: commander.cpp  exploration_visualizer.cpp  fake_traffic_node.cpp  goal_sender_node.cpp  results_visualizer.cpp
robust_routing/: CMakeLists.txt  package.xml  setup.py
robust_routing/scripts/: robust_routing_socp.py  robust_routing_socp_tests.py
robust_routing/src/robust_routing/: socp.py  utils.py
robust_routing/srv/: CommSpec.srv
routing_msgs/: CMakeLists.txt  package.xml
routing_msgs/msg/: CommSpec.msg  FlowSpec.msg  ProbGateway.msg  ProbRelay.msg  RateEdge.msg  RateGraph.msg  RobustFlow.msg  RobustRoutes.msg
