<package format="2">

  <name>connectivity_planner</name>
  <version>0.1.0</version>
  <description>A planner for maintaining algebraic connectivity</description>
  <maintainer email="mox@seas.upenn.edu">Daniel Mox</maintainer>
  <author email="mox@seas.upenn.edu">Daniel Mox</author>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>routing_msgs</depend>

</package>
