<?xml version="1.0"?>
<package format="2">

  <name>laserscan_merger</name>
  <version>0.0.0</version>
  <description>merge two laserscans of the same geometry</description>

  <maintainer email="mox@seas.upenn.edu">Daniel Mox</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_filters</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

</package>
