<?xml version="1.0"?>
<package format="2">

  <name>or_protocol</name>
  <version>0.0.0</version>
  <description>Opportunistic routing protocol for ROS networks</description>

  <maintainer email="mox@seas.upenn.edu">Daniel Mox</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>or_protocol_msgs</depend>

</package>
