<package format="2">

  <name>perch_experiment</name>
  <version>0.1.0</version>
  <description>perch_experiment</description>
  <maintainer email="mox@seas.upenn.edu">Daniel Mox</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>actionlib</depend>
  <depend>experiment_msgs</depend>
  <depend>libncurses-dev</depend>
  <depend>roscpp</depend>
  <depend>exploration_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>or_protocol_msgs</depend>
  <depend>scarab_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>
  <exec_depend>hfn</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gmapping</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>
  <exec_depend>scarab_description</exec_depend>
  <exec_depend>scarab_gazebo</exec_depend>

</package>
