<package format="2">

  <name>routing_msgs</name>
  <version>0.1.0</version>
  <description>ROS Messages related to multi-hop routing</description>
  <maintainer email="mox@seas.upenn.edu">Daniel Mox</maintainer>
  <author email="mox@seas.upenn.edu">Daniel Mox</author>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
